config: bazantic, setup cre and refactor
